--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,8 +9,8 @@
   weight = 10
 
 [[main]]
-  name = "Posts"
-  url = "#posts"
+  name = "Teaching"
+  url = "teaching/"
   weight = 20
 
 [[main]]
@@ -27,6 +27,9 @@
   name = "Contact"
   url = "#contact"
   weight = 60
+
+[[teaching]]
+  name = "getting started"
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
