--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -29,7 +29,9 @@
   weight = 60
 
 [[teaching]]
-  name = "getting started"
+  name = "NDAB02"
+  post = "<span class='alert'>New!</span>"
+  url = "ndab02/"
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
