--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ baseurl = "/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
-copyright = "&copy: Isak Hietala, {year}. All rights reserverd."
+copyright = "&copy; Isak Hietala, {year}. All rights reserverd."
 
 languageCode = "en-us"
 
