Finished clean version for publication

--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -13,10 +13,10 @@
   url = "teaching/"
   weight = 20
 
-[[main]]
-  name = "Projects"
-  url = "#projects"
-  weight = 30
+#[[main]]
+#  name = "Projects"
+#  url = "#projects"
+#  weight = 30
 
 #[[main]]
 #  name = "Slides"
